--- a/g4_frogriders/assets/css/style.css
+++ b/g4_frogriders/assets/css/style.css
@@ -104,19 +104,19 @@ div[id^='player']{
 
 
 
-.red {
+.user-frog.red, .red {
     background-image: url(../images/red.png);
 }
 
-.blue {
+.user-frog.blue, .blue {
     background-image: url(../images/blue.png);
 }
 
-.yellow {
+.user-frog.yellow, .yellow {
     background-image: url(../images/yellow.png);
 }
 
-.brown {
+.user-frog.brown, .brown {
     background-image: url(../images/brown.png);
 }
 
@@ -171,11 +171,7 @@ div[id^='player']{
 	height: 10vmin;
 	width: 10vmin;
 	display: inline-flex;
-	/* align-self: center;
-	justify-self: center; */
 	background-size: cover;
-	/* align-self: auto; */
-	
 }
 
 #villageBlue, #villageRed, #villageYellow {
@@ -186,7 +182,8 @@ div[id^='player']{
 	display: inline-flex;
 	position: relative;
 	align-items: center;
-	justify-content: space-evenly;
+	padding: 8%;
+	justify-content: space-around;
 	flex-direction: column;
 	background-color: lightseagreen;
 	height: 40vh;
@@ -292,6 +289,16 @@ div.puddle-container {
 	border: white thick solid;
 }
 
+.frog-container {
+	width: 100%;
+	height: 40%;
+	margin: 6%;
+	border-radius: 10px;
+	border: white solid thick;
+	background-color: aqua;
+	padding: 10px;
+}
+
 .pick-red, .choose-red {
 	background-image: url(../images/red.png)
 }
@@ -333,10 +340,32 @@ div[id^='player'].currentPlayer {
     top: 0;
     display: flex;
     height: 94vh;
-    width: 100vw;
-    background-color: grey;
-	opacity: .5;
-	display: none;
+	width: 100vw;
+	/* display: none; */
 }
 
-div['']
+div[class^="fan-player"] {
+	display: flex;
+	justify-self: right;
+	height: 80vh;
+	width: 20vw;
+	border-radius: 25px;
+	margin: 2%;
+	border: white thick solid;
+	float: right;
+	background-color: palegoldenrod;
+}
+
+.user-frog {
+	display: inline-block;
+	height: 25px;
+	width: 25px;
+	margin: 1%;
+	background-color: black;
+	border-radius: 4px;
+	background-size: cover;
+}
+
+.hidden {
+	visibility: hidden;
+}
