--- a/g4_frogriders/assets/css/style.css
+++ b/g4_frogriders/assets/css/style.css
@@ -215,27 +215,26 @@ div.puddle-container {
 	transform: translate(-50%, -50%);
 	background-color: lightgreen;
 	border-radius:10%;
-	background-position: cover;
-	background-repeat: no-repeat;
-	/* display: flex; */
+	display: flex;
+	justify-content: center;
 }
 #modalMessage{
 	font-size: 200%;
 	color: white;
 	position: relative;
 	text-align: center;
-	top: 50px;
+	display: flex;
+	top: 10%;
 }
 #modalButton{
 	position: absolute;
-	margin: 5px auto;
-	bottom: 5px;
-	left: 16vmin;
-	padding: 15px;
+	display: flex;
+	justify-self: center;
 	background-color: tan;
 	border: white medium solid;
 	border-radius: 8px;
 	font-family: 'Concert One', cursive;
+	bottom: 10%;
 }
 
 .shadow {
@@ -290,13 +289,30 @@ div.puddle-container {
 }
 
 .frog-container {
-	width: 100%;
 	height: 40%;
+	width: 82%;
+	
 	margin: 6%;
 	border-radius: 10px;
 	border: white solid thick;
 	background-color: aqua;
-	padding: 10px;
+	display: flex;
+	padding: 5px;
+	align-self: flex-end;
+}
+
+.card-container {
+	height: 40%;
+	width: 82%;
+	
+	margin: 6%;
+	border-radius: 10px;
+	border: white solid thick;
+	background-color: grey;
+	align-self: flex-start;
+	display: flex;
+	padding: 5px;
+	top: 10px;
 }
 
 .pick-red, .choose-red {
@@ -355,6 +371,7 @@ div[class^="fan-player"] {
 	border: white thick solid;
 	float: right;
 	background-color: palegoldenrod;
+	flex-direction: column;
 }
 
 .user-frog {
@@ -362,7 +379,8 @@ div[class^="fan-player"] {
 	height: 25px;
 	width: 25px;
 	margin: 1%;
-	background-color: black;
+	background-color: darkslategrey;
+	border: white solid medium;
 	border-radius: 4px;
 	background-size: cover;
 }
@@ -429,4 +447,9 @@ div[class^="fan-player"] {
 	transition: 1s;
 	box-shadow: rgb(14, 44, 70) 5px 5px;
 	
+}
+
+.card-thumbnail {
+	height: 100px;
+	width: 45%;
 }
